syntax = "proto3";

package user.v1;

option go_package = "github.com/galadeat/bank-sim/api/proto/user/v1;userv1";

service User {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (UserInfo);

}

message CreateUserRequest {
    string login = 1;
    string email = 2;
}

message CreateUserResponse {
    string id = 1;
}

message GetUserRequest {
    string id = 1;
}

message UserInfo {
    string id = 1;
    string login = 2;
    string email = 3;
}

